--- a/templates/chart.html
+++ b/templates/chart.html
@@ -17,9 +17,10 @@
             <li role="presentation"><a href="/chart3">Pie Chart</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">NYC WiFi - Summary</h3>
+        <h3 class="text-muted">NYC WiFi - Bar</h3>
       </div>
     <canvas id="chart" width="800" height="600"></canvas>
+    </div>
 <script>
  
    // bar chart data
