--- a/templates/chart3.html
+++ b/templates/chart3.html
@@ -17,9 +17,10 @@
             <li role="presentation" class="active"><a href="/chart3">Pie Chart</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">NYC WiFi - Summary</h3>
+        <h3 class="text-muted">NYC WiFi - Pie</h3>
       </div>
     <canvas id="chart" width="800" height="600"></canvas>
+    </div>
 <script>
  
    // pie chart data
