--- a/templates/chart4.html
+++ b/templates/chart4.html
@@ -18,6 +18,9 @@
    <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
    <link rel="stylesheet" href="../static/css/leaflet.extra-markers.min.css">
  
+ <!-- Our CSS -->
+ <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+
    </head>
    <body> 
       <div class="container">
@@ -30,12 +33,11 @@
               <li role="presentation"><a href="/chart3">Pie Chart</a></li>
             </ul>
           </nav>
-          <h3 class="text-muted">NYC WiFi - Summary</h3>
+          <h3 class="text-muted">NYC WiFi - Map</h3>
         </div>
         <div id="map-id" style="width: 800px; height: 600px"></div>
-   <footer class="footer">
-          <!-- <p>&copy; Vizualization Demo</p> -->
-   </footer>
+        </div>
+
 <!-- D3 -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
 
