--- a/templates/home.html
+++ b/templates/home.html
@@ -22,7 +22,7 @@
             <li role="presentation"><a href="/chart3">Pie Chart</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">NYC WiFi - Summary</h3>
+        <h3 class="text-muted">NYC WiFi</h3>
       </div>
 
       <div class="jumbotron">
