--- a/templates/chart4.html
+++ b/templates/chart4.html
@@ -29,8 +29,9 @@
             <ul class="nav nav-pills pull-right">
               <li role="presentation"><a href="/">Home</a></li>
               <li role="presentation" class="active"><a href="/chart4">Map</a></li>
-              <li role="presentation"><a href="/chart">Bar Chart</a></li>
-              <li role="presentation"><a href="/chart3">Pie Chart</a></li>
+              <li role="presentation"><a href="/chart2">Provider Chart</a></li>
+              <li role="presentation"><a href="/chart">Borough Count</a></li>
+              <li role="presentation"><a href="/chart3">Borough %</a></li>
             </ul>
           </nav>
           <h3 class="text-muted">NYC WiFi - Map</h3>
