--- a/templates/chart.html
+++ b/templates/chart.html
@@ -11,13 +11,14 @@
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation"><a href="/">Home</a></li>
+            <li role="presentation" class="active"><a href="/">Home</a></li>
             <li role="presentation"><a href="/chart4">Map</a></li>
-            <li role="presentation" class="active"><a href="/chart">Bar Chart</a></li>
-            <li role="presentation"><a href="/chart3">Pie Chart</a></li>
+            <li role="presentation"><a href="/chart2">Provider Chart</a></li>
+            <li role="presentation"><a href="/chart">Borough Count</a></li>
+            <li role="presentation"><a href="/chart3">Borough %</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted">NYC WiFi - Bar</h3>
+        <h3 class="text-muted">Borough Count</h3>
       </div>
     <canvas id="chart" width="800" height="600"></canvas>
     </div>
