--- a/templates/home.html
+++ b/templates/home.html
@@ -29,6 +29,7 @@
         <h1>NYC WiFi</h1>
         <span>Where can you find WiFi in NYC? Which Borough has the most stations? Use our interactive visualizations to find out!
       </div>
+      <img width="700"  src = "https://i.gifer.com/44ml.gif">
 
     </div>
    
