--- a/templates/chart.html
+++ b/templates/chart.html
@@ -11,10 +11,10 @@
       <div class="header">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="/">Home</a></li>
+            <li role="presentation"><a href="/">Home</a></li>
             <li role="presentation"><a href="/chart4">Map</a></li>
             <li role="presentation"><a href="/chart2">Provider Chart</a></li>
-            <li role="presentation"><a href="/chart">Borough Count</a></li>
+            <li role="presentation" class="active"><a href="/chart">Borough Count</a></li>
             <li role="presentation"><a href="/chart3">Borough %</a></li>
           </ul>
         </nav>
