--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,8 @@
      <link href="../static/css/jumbotron-narrow.css" rel="stylesheet">
     <script src="../static/js/jquery-1.11.2.js"></script>
     <script src="../static/js/Chart.min.js"></script>
+ <!-- Our CSS -->
+ <link rel="stylesheet" type="text/css" href="../static/css/style.css">
   </head>
 
   <body>
