--- a/templates/chart2.html
+++ b/templates/chart2.html
@@ -22,6 +22,7 @@
           </div>
         <canvas id="chart" width="800" height="600"></canvas>
         </div>
+    <!-- ChartJS tutorial: "https://blog.ruanbekker.com/blog/2017/12/14/graphing-pretty-charts-with-python-flask-and-chartjs/" -->
     <script>
      
        // pie chart data
@@ -61,7 +62,7 @@
        // get pie chart canvas
        var ctx = document.getElementById("chart").getContext("2d");
     
-       var PieChartDemo = new Chart(ctx).Pie(chartData, options);
+       var PieChart = new Chart(ctx).Pie(chartData, options);
        
     </script>
     </body>
