--- a/templates/chart4.html
+++ b/templates/chart4.html
@@ -32,9 +32,11 @@
               <li role="presentation"><a href="/chart2">Provider Chart</a></li>
               <li role="presentation"><a href="/chart">Borough Count</a></li>
               <li role="presentation"><a href="/chart3">Borough %</a></li>
+              <li role="presentation"><a href="/chart5">Indoor</a></li>
+              <li role="presentation"><a href="/chart6">Outdoor</a></li>
             </ul>
           </nav>
-          <h3 class="text-muted">NYC WiFi - Map</h3>
+          <h3 class="text-muted">Map</h3>
         </div>
         <div id="map-id" style="width: 800px; height: 600px"></div>
         </div>
