--- a/templates/chart2.html
+++ b/templates/chart2.html
@@ -16,6 +16,8 @@
                 <li role="presentation" class="active"><a href="/chart2">Provider Chart</a></li>
                 <li role="presentation"><a href="/chart">Borough Count</a></li>
                 <li role="presentation"><a href="/chart3">Borough %</a></li>
+                <li role="presentation"><a href="/chart5">Indoor</a></li>
+                <li role="presentation"><a href="/chart6">Outdoor</a></li>
               </ul>
             </nav>
             <h3 class="text-muted">Provider</h3>
